# voo_wp

./: CMakeLists.txt  package.xml  plugins.xml
config/: default.yaml  dynparam.cfg
launch/: waypoint_fly.launch
src/: waypoint_fly.cpp
